--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
+    "react-window": "https://esm.sh/react-window",
+    "react-virtualized-auto-sizer": "https://esm.sh/react-virtualized-auto-sizer"
   }
 }
 </script>
